bk_ida/gccida/c1/reg_dead_at_p
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reg_dead_at_p/src/combine.c:12150:25: error: use of undeclared identifier 'mode_class_0'; did you mean 'mode_class'?
v4 = ( ( unsigned int)( mode_class_0[v5] - 5) < 2) + 1; 
                        ^~~~~~~~~~~~
                        mode_class
/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reg_dead_at_p/src/machmode.h:52:30: note: 'mode_class' declared here
extern const enum mode_class mode_class[NUM_MACHINE_MODES];
                             ^
1 error generated.
make: *** [/data/output_dir/patch/gcc/ida/clang/O1/gcc-clang-O1/reg_dead_at_p/src/obj/combine.o] Error 1
